[package]
name = "Rusty_Kanban"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
home = "0.5"
structopt = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.